--- a/index.css
+++ b/index.css
@@ -1,3 +1,36 @@
-#heading{
-    color: red;
+.header {
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid black;
+}
+.logo {
+  width: 200px;
+}
+.nav-items > ul {
+  display: flex;
+  font-size: 24px;
+  list-style-type: none;
+}
+.nav-items > ul > li {
+  padding: 10px;
+  margin: 10px;
+}
+.res-card{
+    padding: 5px;
+    margin: 5px;    
+    width: 200px;
+    height: 350px;
+    border: 1px solid black;
+}
+.search{
+    padding: 10px;
+}
+.product-image{
+    width: 100%;
+   
+}
+.res-container{
+    display: flex;
+    flex-wrap: wrap;
+   
 }
